--- a/.github/workflows/dzil-test.yml
+++ b/.github/workflows/dzil-test.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Install Dependencies
         run: cpm install -g --no-test --show-build-log-on-failure --cpanfile cpanfile
       - name: Run tests
-        run: prove -lmfr t
+        run: prove -lmfr -j4 t
